@@ -29,7 +29,15 @@ def get_veff(ks_grad, mol=None, dm=None):
         grids = mf.grids
     if grids.coords is None:
         grids.build(with_non0tab=True)
-    hyb = mf._numint.libxc.hybrid_coeff(mf.xc, spin=mol.spin)
+
+    if mf.nlc!='':
+        raise NotImplementedError
+    #enabling range-separated hybrids
+    omega, alpha, beta = mf._numint.rsh_coeff(mf.xc)
+    if abs(omega) > 1e-10:
+        hyb = alpha + beta
+    else:
+        hyb = mf._numint.hybrid_coeff(mf.xc, spin=mol.spin)
 
     mem_now = lib.current_memory()[0]
     max_memory = max(2000, ks_grad.max_memory*.9-mem_now)
@@ -43,12 +51,18 @@ def get_veff(ks_grad, mol=None, dm=None):
     nao = vxc.shape[-1]
     t0 = logger.timer(ks_grad, 'vxc', *t0)
 
-    if abs(hyb) < 1e-10:
+    if abs(hyb) < 1e-10 and abs(alpha) < 1e-10:
         vj = ks_grad.get_j(mol, dm)
         vxc += vj
     else:
         vj, vk = ks_grad.get_jk(mol, dm)
-        vxc += vj - vk * (hyb * .5)
+        vk *= hyb
+        if abs(omega) > 1e-10:  # For range separated Coulomb operator
+            with mol.with_range_coulomb(omega):
+                vklr = ks_grad.get_k(mol, dm)
+            vklr *= (alpha - hyb)
+            vk += vklr
+        vxc += vj - vk * .5
 
     return lib.tag_array(vxc, exc1_grid=exc)
 
